--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,68 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="background"> 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="general-container">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <img src="images/phones.png" class="phone-img">
 
-  Oh yeah, did we mention it's free?
+    <div class="content">
+      
+      <div class="header">
+        <h1>
+          <img src="images/brand.png" class="instagram-title">
+        </h1>
 
-  Download on the App Store
-  Get it on Google Play
+        <button class="login-button">
+          <img src="images/home.png">
+          <a href="https://www.google.com">
+            Log in
+          </a>
+        </button>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="info-box">
+        <h2> Capture and Share the World's Moments </h2>
+        
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        </p>
 
-  &copy; 2014 Instagram
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+
+        <div>
+          <img src="images/badge-iphone.png" class="badge-iphone">
+          <img src="images/badge-android.png" class="badge-android">
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <a href="https://www.google.com"> About Us </a>
+      <a href="https://www.google.com""> Support </a>
+      <a href="https://www.google.com"> Blog </a>
+      <a href="https://www.google.com"> Press </a>
+      <a href="https://www.google.com"> API </a>
+      <a href="https://www.google.com"> Jobs </a>
+      <a href="https://www.google.com"> Privacy </a>
+      <a href="https://www.google.com"> Terms </a>
+      <span class="copyright-text"> &copy; 2014 INSTAGRAM </span>
+    </footer>
+
+</div>
+  </div>
+
 </body>
 </html>
