--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,63 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+<div class="background-blue">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
 
-  &copy; 2014 Instagram
+
+    <img class="instapic" src="images/phones.png" alt="IPhone">
+
+    <img class="insta-logo" src="images/brand.png" alt="insta logo">
+
+<div class="instainfo">
+
+  <h2>Capture and Share<br> the World's Moments</h2>
+
+
+<p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>
+  way to share your life with friends and family.</p>
+
+<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+&mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way
+to see the world.</p>
+
+<p>Oh yeah, did we mention it's free?</p>
+
+<img src="images/badge-iphone.png" alt="iPhone badge">
+<img src="images/badge-android.png" alt="android badge">
+
+
+</div>
+
+<div class="home">
+  <img src="images/home.png" alt="home logo"> log in
+</div>
+
+
+
+<div class="footer">
+
+
+  <a href="">About Us</a>
+  <a href="">Support</a>
+  <a href="">Blog</a>
+  <a href="">Press</a>
+  <a href="">API</a>
+  <a href="">Jobs</a>
+  <a href="">Privacy</a>
+  <a href="">Terms</a>
+  <a>&copy; 2014 Instagram</a>
+
+</div>
+
 </body>
 </html>
