--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="instabox">
+<div class="blueline">
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="content">
+  <img class="content-left" src="./images/phones.png">
+  <img class="instagram" src="./images/brand.png">
+  <button>
+  <img class="login" src="./images/home.png" >
+  <a href="#blah">Log In</a>
+  </button>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+<div class="capturetext">
+<h2>Capture and Share </br>the World's Moments</h2>
+<p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</br></br>
+ Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+ </br></br>Oh yeah, did we mention it's free?</p>
+ </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+ <div class="badge">
+ <img src="./images/badge-iphone.png">
+ <img src="./images/badge-android.png">
+ </div>
+</div>
 
-  &copy; 2014 Instagram
+
+
+<div class="footer">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="copyright"> &copy; 2014 Instagram</li>
+  </ul>
+</div>
+
+</div>
 </body>
 </html>
