--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href='css/main.css' rel='stylesheet'>
 </head>
 <body>
-  Instagram
+  <div class='background'>
+  <div class='allContent'>
+    <img src='images/phones.png' alt='phones' class='phonePic'>
+    <div class='mainContent'>
+        <img src='images/brand.png'>
+        <span class='login'>
+          <img class='loginImg' src='images/home.png'>
+            <span class='loginText'>Log In</span>
+        </span>
+        <div class='paragraphBox'>
+          <div class='paragraphBoxText'>
+            <h2 class='paragraphHeading'>Capture and Share <br> the World's Moments</h2>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+            <p>Oh yeah, did we mention it's free?</p>
+            <img class='appLink'src='images/badge-iphone.png'>
+            <img class='appLink'src='images/badge-android.png'>
+          </div>
+        </div>
+      </div>
+    <footer class='mainFooter'>
+      <nav>
+        <a>About Us</a>
+        <a>Support</a>
+        <a>Blog</a>
+        <a>Press</a>
+        <a>API</a>
+        <a>Jobs</a>
+        <a>Privacy</a>
+        <a>Terms</a>
+      </nav>
+      <span class='copyright'> &copy; 2014 Instagram </span>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
