--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="container">
+  <img class="iphone-img" src="./images/phones.png">
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="main-content">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<img class="title-logo" src=./images/brand.png>
 
-  Oh yeah, did we mention it's free?
+<button class="login"><img class="home"src=./images/home.png>
+  <p class="log"> Log in</p>
+</button>
 
-  Download on the App Store
-  Get it on Google Play
+<div class="frame"> </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <h1 class="main-title">Capture and Share the World's Moments</h1>
 
-  &copy; 2014 Instagram
+  <p class="text">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br/>
+
+  <br/>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br/>
+
+  <br/>Oh yeah, did we mention it's free? </p>
+
+
+<img class= "iphone" src=./images/badge-iphone.png>
+<img class="android" src=./images/badge-android.png>
+
+
+</div>
+
 </body>
+
+<footer>
+  <span>About Us</span>
+  <span>Support</span>
+  <span>Blog</span>
+  <span>Press</span>
+  <span>API</span>
+  <span>Jobs</span>
+  <span>Privacy</span>
+  <span>Terms</span>
+
+
+  <span>&copy; 2014 Instagram</span>
+</footer>
+
 </html>
