--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="utf-8">
+    <title>Instagram</title>
+    <link href="css/main.css" rel="stylesheet">
+  </head>
 
-  Capture and Share the World's Moments
+  <body>
+    <div class="bgtile"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <img class="phones"
+       src="images/phones.png" alt="image of smartphones">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="rightContent">
+      <div class="innerStyle">
+        <div class="logo">
+          <img src="images/brand.png" alt="image of company name">
+          <img src="images/home.png" alt="image of a home">
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <div class="frame">
+          <h2 class="subHeading">Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="appStores">
+          <img src="images/badge-iphone.png" alt="Apple app store logo">
+          <img src="images/badge-android.png" alt="Google play store logo">
+        </div>
+      </div>
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <div class="footer">
+      <textAbout Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+      &copy; 2014 Instagram
+    </div>
+  </body>
 </html>
