--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel = "stylesheet" href = "css/main.css" >
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div id="backgroundTile"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div id="overlappingBox">
+    <div id="phoneImg"></div>
+    <div id="title">
+      <img src="images/brand.png">
+      <div id="loginBtn">
+        <button>
+          <img src="images/home.png">&nbsp;Log in
+        </button>
+      </div>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div id="whiteBox">
+      <div id="header">
+        Capture and Share<br />the World's Moments
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div id="contents">
+        <p>Instagram is a <strong>fast</strong>,
+          <strong>beautiful</strong> and <strong>fun</strong> way to
+          share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Take a picture or video, choose a filter to
+          transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to
+          Facebook, Twitter, Tumblr and more.
+          It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div id="icons">
+        <img src="images/badge-iphone.png" class="download">
+        <img src="images/badge-android.png" class="download">
+      </div>
+    </div>
 
-  &copy; 2014 Instagram
+    <div id="footer">
+      <a>About Us</a>&nbsp;&nbsp;
+      <a>Support</a>&nbsp;&nbsp;
+      <a>Blog</a>&nbsp;&nbsp;
+      <a>Presss</a>&nbsp;&nbsp;
+      <a>API</a>&nbsp;&nbsp;
+      <a>Jobs</a>&nbsp;&nbsp;
+      <a>Privacy</a>&nbsp;&nbsp;
+      <a>Terms</a>&nbsp;&nbsp;
+
+      <span>&copy; 2014 Instagram</span>
+    </div>
+
+  </div>
 </body>
 </html>
