--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="centeredbox">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="iphonebox">
+      <img class="iphone" src="./images/phones.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="instagrambox">
+      <img class="instagram" src="./images/brand.png">
+      <div class="loginbutton">
+        <img class="homelogin" src="./images/home.png">
+        <span class="login"> Log In </span>
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="textdiv">
+      <h3>Capture and Share the World's Moments</h3>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+  <p>Oh yeah, did we mention it's free?</p>
+      <div class="appstorebuttons">
+      <img class="applebutton" src="./images/badge-iphone.png">
+      <img class="googlebutton" src="./images/badge-android.png">
+      </div>
+    </div>
+
+    </div>
+
+  <div class="aboutusdiv"
+    <nav>
   About Us
   Support
   Blog
@@ -25,7 +45,9 @@
   Jobs
   Privacy
   Terms
-
+    </nav>
   &copy; 2014 Instagram
+  </div>
+
 </body>
 </html>
