--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="blue-box"></div>
+    <div class="white-box"></div>
 
-  Capture and Share the World's Moments
+<!-- Floating square with information -->
+    <div class="content-box">
+    <!-- phone images -->
+        <img src="images/phones.png" alt="iPhones">
+    <!-- instagram logo + text box with written info -->
+      <div class="logos-and-info-big-container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="logo-and-logIn">
+          <div class="logo"><img src="images/brand.png" alt="Instagram Logo"></div>
+          <a href="#"><div class="log-in-button">
+            <div class="house-icon"><img src="images/home.png" alt="House icon"></div>
+            <div class="text-log-in">Log In</div>
+          </div></a>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      <!-- White information box -->
+        <div class="information-text">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. <br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world. <br><br> Oh yeah, did we mention it's free?
+          </p>
+          <a href="#"><img class="float-left" src="images/badge-iphone.png" alt="Download in app store"></a>
+          <a href="#"><img class="float-left" src="images/badge-android.png" alt="Download in Android store"></a>
+        </div>
+      </div>
+    </div>
+    <div class="bottom-links">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <a href="#">&copy; 2014 Instagram</a>
+    </div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
