--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class = "header">
+  <div class= "header-info">
+  <img src="images/brand.png" vertical align: middle/>
+  <button class ="button" style= "vertical align: middle"> <img src="images/home.png"/> Log in </button>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+   </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</div>
 
-  Oh yeah, did we mention it's free?
+<div class ="phones">
+<img src ="images/phones.png">
+</div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  <div class="info">
+    <div class ="text">
+      <h1> Capture and Share the World's Moments </h1>
+
+      <p>Instagram is a <strong>fast, beautiful </strong> and <strong> fun </strong> way to share your life with friends and family. </p>
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+
+  <p>Oh yeah, did we mention it's free? </p>
+
+  <img src="images/badge-iphone.png"/>
+  <img src="images/badge-android.png"/>
+</div>
+
+</div>
+
+
+
+<footer>
+  <p> ABOUT US</p>
+  <p>SUPPORT</p>
+  <p>BLOG</p>
+  <p>PRESS</p>
+  <p>API</p>
+  <p>JOBS</p>
+  <p>PRIVACY</p>
+  <p>TERMS</p>
+  <p class ="insta"> &copy; 2014 Instagram </p>
+
+</footer>
 </body>
 </html>
