--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,66 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div id="top-blue-band">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="all-content">
+  <img id="demo-image" src="images/phones.png">
+  <div class="main-content">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="header">
+      <img id="instagam-logo" src="images/brand.png">
+      <div id="login-button" href="#0">
+        <img id="home-icon" src="images/home.png">
+        <span id="login-text">Log in</span>
+      </div>
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="info-card">
+      <div id="catchphrase">
+            <h2>Capture and Share the World's Moments</h2>
 
-  &copy; 2014 Instagram
+        </div>
+        <div id="description">
+          Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life<br />
+          with friends and family.
+          <p>
+          Take a picture or video, choose a filter to transform its look<br />
+           and feel, then post to Instagram
+          &mdash; it's that easy. You can<br />
+          even share to Facebook, Twitter, Tumblr and more. It's a<br />
+           new way to see the world.
+           <p>
+          Oh yeah, did we mention it's free?
+        </div>
+    </div>
+
+    <div id="download-links">
+      <img class="download-icons" src="images/badge-iphone.png" href="#0">
+      <img class="download-icons" src="images/badge-android.png" href="#0">
+    </div>
+  </div>
+
+  <div class="footer">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <span class="copyright">&copy; 2014 Instagram</span>
+  </div>
+
+      </div>
+    </div>
+  </div>
 </body>
 </html>
