--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class = 'backGroundBlue'>
+</div>
 
-  Capture and Share the World's Moments
+<div class = 'bigContainer'>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img class = 'brand' src = './images/brand.png'>
+  <img class = 'phones'  src = './images/phones.png'>
+  <img class = 'whiteFrameWithText' src = './images/frame.png'>
+  <img class = 'iPhoneBadge' src = './images/badge-iphone.png'>
+  <img class = 'androidBadge' src = './images/badge-android.png'>
+  <img class = 'logInButton' src = './images/home.png'>
+</div>
+
+
+  <div class = 'captureAndShare'>
+
+    <strong>Capture and Share
+    the World's Moments</strong>
+</div>
+
+<div class = 'textContent'>
+
+
+
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+</p>
+</div>
+</body>
+<footer>
   About Us
   Support
   Blog
@@ -25,7 +46,6 @@
   Jobs
   Privacy
   Terms
-
-  &copy; 2014 Instagram
-</body>
+    &copy; 2014 Instagram
+</footer>
 </html>
