--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,22 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="background">
+  </div>
+  <div class="white">
+  </div>
 
-  Capture and Share the World's Moments
+<div class="iphone">
+<img id="phones" src="images/phones.png"  alt="phones pic">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</div>
+<div class="instagram">
+<img id="heading" src="images/brand.png"  alt="instagram pic">
+<div class="home">
+  <img id="homeicon" src="images/home.png"  alt="house icon">
+  <p> Log in </p>
+</div>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="frame">
+<img id="framepic" src="images/frame.png" alt="frame">
+    <h1>Capture and Share <br> the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Download on the App Store
-  Get it on Google Play
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  About Us
+    Oh yeah, did we mention it's free?
+  </p>
+</div>
+<div class="logos">
+  <img id="iphonepic" src="images/badge-iphone.png" alt="frame">
+    <img id="androidpic" src="images/badge-android.png" alt="frame">
+</div>
+
+<div class="footer">
+  <span class="bottom">About Us
   Support
   Blog
   Press
@@ -25,7 +47,10 @@
   Jobs
   Privacy
   Terms
-
-  &copy; 2014 Instagram
+  <span id="year">&copy; 2014 Instagram</span>
+</span>
+</div>
+</div>
+</div>
 </body>
 </html>
