--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <!--<div class="container">-->
+    <div class="blue-box">
+      <img class="brand" src="images/brand.png" alt="brand"/>
+      <img class="phones"src="images/phones.png" alt="phones"/>
+    </div>
 
-  Capture and Share the World's Moments
+      <div class="content">
+        <img class="frame" src="images/frame.png" alt="frame"/>
+        <div class="one"></div>
+        <div class="text">
+            <p><strong>Capture and Share the World's Moments</strong></p>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+            Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="iphone">
+          <img src="images/badge-iphone.png" alt="iphone"/>
+        </div>
+        <div class="andriod">
+          <img src="images/badge-android.png" alt="phones"/>
+        </div>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class="footer">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a style="color:gray;" href="#">&copy; 2014 Instagram</a></li>
+      </ul>
+  </div>
 </body>
 </html>
