--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,8 +18,8 @@
             <button class="boton"><img src="images/home.png"><span>  Log in</span></button>
         </div>
         <div class="contenido">
-          <h3 class="subtitulo">Capture and Share the World's Moments</h3>
-          <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <h3 class="subtitulo">Capture and Share <br>the World's Moments</h3>
+          <p>  Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
             <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
