--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel = "stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-  Instagram
+  <section id="main">
+    <div class="upper-blue">
+    </div>
+    <div class="bottom-white">
+    </div>
+    <div class="mobile-img">
+      <img src="images/phones.png" />
+    </div>
+    <div class="logo">
+      <img src="images/brand.png" />
+      <div class="login">
+        <img src="images/home.png" />
+        <span>
+        Log in
+        </span>
+      </div>
+    </div>
+    <div class="presentation-text">
+        <span class="title">Capture and Share the World's Moments</span>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="phone-badges">
+          <img src="images/badge-android.png" />
+          <img src="images/badge-iphone.png" />
+        </div>
+    </div>
+  </section>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  
+  <footer>
+    <ul class="footer-links">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
   &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
