--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="header"></div>
+  <div class="container">
+    <div class="main_wrapper">
+      <img src="images/phones.png" class="content_image" alt="Instagram logo">
+      <div class="content">
+        <div class="login">
+          <h1 class="login_logo">Instagram</h1>
+          <a href="#" class="login_action">Log in</a>
+        </div>
+        <div class="card">
+          <div class="card_title">
+            Capture and Share the World's Moments
+          </div>
+          <div class="card_content">
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="card_content_actions">
+              <a href="#">
+                <img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+              <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <ul class="footer_list">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
