--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <div class="background-top">
+    </div>
+    <div class="background-middle">
+    </div>
+    <footer class="background-bottom">
+      <ul>
+        <li><a href="https://www.instagram.com/about/us/"> about us</a></li>
+        <li><a href="https://help.instagram.com/"> support </a></li>
+        <li><a href="http://blog.instagram.com/"> blog </a></li>
+        <li><a href="https://instagram-press.com/"> press </a></li>
+        <li><a href="https://www.instagram.com/developer/"> api </a></li>
+        <li><a href="https://www.instagram.com/about/jobs/"> jobs </a></li>
+        <li><a href="https://help.instagram.com/196883487377501"> privacy </a></li>
+        <li><a href="https://help.instagram.com/478745558852511"> terms </a></li>
+        <li><a class="copyright" href="https://help.instagram.com/478745558852511"> &#9400 2014 instagram</a></li>
+      </ul>
+    </footer>
+    <section class="wrapper">
+      <div class="mobile-photo">
+        <img src="images/phones.png"/>
+      </div>
+      <div class="content-div">
+        <div class="content-header">
+          <div class="brand-logo">
+            <img src="images/brand.png"/>
+          </div>
+          <div class="login-div">
+            <img src="images/home.png"/>
+            <span>log in</span>
+          </div>
+        </div>
+        <div class="content-body">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or vclasseo, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<p>
+          <p>Oh yeah, dclass we mention it's free?</p>
+        </div>
+        <div class="content-footer">
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
+        </div>
+      </div>
+    </section>
+  </div>
+  </div>
 </body>
 </html>
