--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
 
-  Capture and Share the World's Moments
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section>
+    <div id="content">
+      <div id="phones">
+        <img src="./images/phones.png" alt="">
+      </div>
+      <div id="middleRigth">
+        <div id="upRigth">
+          <img src="./images/brand.png" id="imgBrand">
+            <button type="button"><img src="./images/home.png" id="imgButton">Log in</button>
+        </div>
+        <div id="centerRigth">
+            <h1>Capture and Share
+            <br>
+            the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+            <br>
+            <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>
+            <br>
+          Oh yeah, did we mention it's free?
+        </div>
+        <div id="bottomRigth">
+          <img src="./images/badge-iphone.png" alt="">
+          <img src="./images/badge-android.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 
-  Oh yeah, did we mention it's free?
+  <footer>
+    <a>About Us</a>
+    <a>Support</a>
+    <a>Blog</a>
+    <a>Press</a>
+    <a>API</a>
+    <a>Jobs</a>
+    <a>Privacy</a>
+    <a>Terms</a>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <span>&copy; 2014 Instagram</span>
+  </footer>
 </body>
 </html>
