--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class=background1>
+  </div>
+  <div class=content>
+    <div class=smartphone>
+        <img src= "images/phones.png"/>
+    </div>
+    <div class=description>
+      <div class=header>
+        <img src= "images/brand.png"/>
+        <div class=login-button>
+          <img src= "images/home.png"/> Log in
+        </div>
+      </div>
+      <div class=text>
+        <h2>Capture and Share <br> the World's Moments</h2>
 
-  Capture and Share the World's Moments
+        Instagram is a fast, beautiful and fun way to share your life with friends and family. <br>
+        <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+        <br>
+        Oh yeah, did we mention it's free?
+      </div>
+      <div class=buttons>
+        <img class="iphone" src= "images/badge-iphone.png"/>
+        <img class="android" src= "images/badge-android.png"/>
+      </div>
+    </div>
+  </div>
+  <div class=background2>
+    <nav>
+      <a>About Us</a>
+      <a>Support</a>
+      <a>Blog</a>
+      <a>Press</a>
+      <a>API</a>
+      <a>Jobs</a>
+      <a>Privacy</a>
+      <a>Terms</a>
+      <a>
+        <span> &copy; 2014 Instagram</span>
+      </a>
+      </nav>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
