--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,83 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="header">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="middle">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="main">
 
-  Oh yeah, did we mention it's free?
+    <div id="iphone">
+      <img src="images/phones.png">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div id="mainBox">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div id="top">
+          <img src="images/brand.png">
+          <button id="logIn">
+            <img src="images/home.png">
+            <span id="logInText"> Log in </span>
+          </button>
+        </div>
 
-  &copy; 2014 Instagram
+          <div id="mainText">
+                <p id="mainTextTitle">
+                    Capture and Share<br>the World's Moments
+                </p>
+
+                <p id="mainTextParagraph">
+                Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+                <br>
+
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+
+                Oh yeah, did we mention it's free?<br><br>
+                </p>
+          </div>
+
+          <div id="buttons">
+              <img src="images/badge-iphone.png">
+              <span>  &nbsp &nbsp </span>
+              <img src="images/badge-android.png">
+          </div>
+
+      </div>
+
+    </div>
+
+  <div class="footer">
+    <a href="https://www.instagram.com/about/us/"> ABOUT US </a>
+    <a href="https://help.instagram.com/"> SUPPORT </a>
+    <a href="http://blog.instagram.com/"> BLOG </a>
+    <a href="https://instagram-press.com/"> PRESS </a>
+    <a href="https://www.instagram.com/developer/"> API </a>
+    <a href="https://www.instagram.com/about/jobs/"> JOBS </a>
+    <a href="https://help.instagram.com/196883487377501"> PRIVACY </a>
+    <a href="https://help.instagram.com/478745558852511"> TERMS </a>
+    <a id="copyright" href="https://help.instagram.com/478745558852511"> &#9400 2014 INSTAGRAM</a>
+
+  </div>
+
+
+
 </body>
 </html>
+
+
+
+
+
+  <!-- Instagram
+
+
+
+
+
+  &copy; 2014 Instagram
