--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+    <header class="background-hd">
+      <div class="contenedor">
+            <div class="contenedor-image">
+                <img src="images/phones.png">
+            </div>
 
-  Capture and Share the World's Moments
+        <div class="contenedor-info">
+            <div class="header-info">
+                  <img class="brand" src="images/brand.png"> 
+                  <button> <img src="images/home.png"> Log In </button>
+            </div> 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="cuerpo-info-img">
+            <h3>Capture and Share<br> the World's Moments</h3>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br> <br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br> <br>
 
-  Oh yeah, did we mention it's free?
+            Oh yeah, did we mention it's free?</p>
+            <div class="cuerpo-info-des">
+                <img class="cuerpo-info-apple" src="images/badge-iphone.png"> 
+                <img src="images/badge-android.png">
+            </div>
 
-  Download on the App Store
-  Get it on Google Play
+        </div>
+      </div>
+    </header>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
+<footer>
+  <nav class="navegacion-footer">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+  </nav>
+  <span>&copy; 2017 Instagram</span>
+  
+</footer>
 </html>
