--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</header>
+<div class="content">
+<div class="login">
+<img class="phones" src="images/phones.png" alt="phones">
+<a href="#"><img src="images/home.png" alt="home"></a>Log in
+</div>
+<img class="brand" src="images/brand.png" alt="Instagram">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="allinfo">
+  <h3>Capture and Share <br> the World's Moments</h3>
+<p>
+  Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
+
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
   Oh yeah, did we mention it's free?
+</p>
+<a href='#'><img class="iphone" src="images/badge-iphone.png" alt="Download on the App Store"></a>
+<a href='#'><img class="android" src="images/badge-android.png" alt="Get it on Google Play"></a>
 
-  Download on the App Store
-  Get it on Google Play
+</div>
+</div>
+<footer>
+<div class="last">
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <span>&copy; 2014 Instagram</span>
+</div>
+</footer>
+</div>
+</div>
 
-  &copy; 2014 Instagram
 </body>
 </html>
