--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="phones">
+    <img src="./images/phones.png">
+  </img>
+</div>
+<div class="brand">
+  <img src="./images/brand.png">
+</img>
+</div>
+<button class="button">
+  <img class="home" src="./images/home.png">
+  </img>
+<p class="log-in"><strong>Log in</strong></p>
+</button>
+<div class="frame">
 
-  Capture and Share the World's Moments
+  <h1 class="title">Capture and Share<br> the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life<br> with friends and family.<br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br>
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?<br>
+  <img src="./images/badge-iphone.png">
+</img>
+<img src="./images/badge-android.png">
+</img>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer class="about-us">
+  <a href="https://www.instagram.com/about/us/"> ABOUT US </a>
+      <a href="https://help.instagram.com/"> SUPPORT </a>
+      <a href="http://blog.instagram.com/"> BLOG </a>
+      <a href="https://instagram-press.com/"> PRESS </a>
+      <a href="https://www.instagram.com/developer/"> API </a>
+      <a href="https://www.instagram.com/about/jobs/"> JOBS </a>
+      <a href="https://help.instagram.com/196883487377501"> PRIVACY </a>
+      <a href="https://help.instagram.com/478745558852511"> TERMS </a>
+      <a href="https://help.instagram.com/478745558852511"> <span class="copy">&#9400 2014 INSTAGRAM</span></a>
+</footer>
 </body>
 </html>
