--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="../starter-code/css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+  </header>
+  <div class="wrap">
+    <div id="phone">
+      <img src="/Users/danigp/IronHack/Week1/day2/lab-css-instagram-clone/starter-code/images/phones.png">
+    </div>
+    <div class="info-instagram">
+      <div id="firstrow">
+        <img id="imagenIG" src="/Users/danigp/IronHack/Week1/day2/lab-css-instagram-clone/starter-code/images/brand.png">
+        <button>
+          <img src="/Users/danigp/IronHack/Week1/day2/lab-css-instagram-clone/starter-code/images/home.png">Log in
+        </button>
+      </div>
+      <div id="bodytext">
+        <h2>Capture and Share <br> the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div id="app">
+        <a href=#><img src="/Users/danigp/IronHack/Week1/day2/lab-css-instagram-clone/starter-code/images/badge-android.png"></a>
+        <a href=#><img src="/Users/danigp/IronHack/Week1/day2/lab-css-instagram-clone/starter-code/images/badge-iphone.png"></a>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <a href=#>About Us</a>
+    <a href=#>Support</a>
+    <a href=#>Blog</a>
+    <a href=#>Press</a>
+    <a href=#>API</a>
+    <a href=#>Jobs</a>
+    <a href=#>Privacy</a>
+    <a href=#>Terms</a>
+    <span id=copyIG>&copy; 2014 Instagram</span>
+  </footer>
 </body>
+
 </html>
