--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="top"></div>
+  <div id="generalContainer">
+    <div id="containerLeft">
+      <img src="images/phones.png" alt="phones">
+    </div>
+    <div id="containerRight">
+      <div id="title">
+        <div id="instagram"><img src="images/brand.png" alt="brand"></div>
+        <div id="logInButton">
+          <div id="logIn">
+            <img style="vertical-align:middle" src="images/home.png" alt="home">
+            <span>Log in</span>
+          </div>
+        </div>
+      </div>
+      <div id="content">
+        <h1>Capture and Share<br>the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+        Oh yeah, did we mention it's free?<br>
+      </div>
+      <div id="download">
+        <img src="images/badge-iphone.png" alt="iphone">
+        <img id="android" src="images/badge-android.png" alt="android">
+      </div>
+    </div>
+  </div>
+  <footer>
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
   &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
