--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,68 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
+      <meta charset="UTF-8">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div id="wrap">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div id="iphonepreview">
+    <img src="images/phones.png">
+    </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    <div id="maincontent">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div id="instagram">
 
-  &copy; 2014 Instagram
+      <img src="images/brand.png">
+
+      <button type="button">
+        <img src="images/home.png">
+        <span>log in</span>
+      </button>
+    </div>
+
+
+    <div id="content">
+      <h2>Capture and Share <br> the World's Moments</h2>
+
+      <p>Instagram is a <strong>fast</strong>, <strong> beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    </p>
+
+      <p>Oh yeah, did we mention it's free?</p>
+
+    </div>
+
+
+    <div id="download">
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
+
+  </div>
+
+  </div>
+
+
+<footer>
+<a href="#">About Us</a>
+<a href="#">Support</a>
+<a href="#">Blog</a>
+<a href="#">Press</a>
+<a href="#"> API</a>
+<a href="#">Jobs</a>
+<a href="#">Privacy</a>
+<a href="#">Terms</a>
+  <span>&copy; 2014 Instagram</span>
+</footer>
+
+
+
 </body>
 </html>
