Instagram clone done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div id="main-container">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div id="instagram-phones">
+      <div><img src="images/phones.png" alt=""></div>
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div id="info">
+      <div id="header-info">
+        <span><img src="images/brand.png" alt=""></span>
+        <span id="btn-login"><a href="#"><button class="btn"><img src="images/home.png" alt="">Log in</button></a></span>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div id="text-info">
+        <h2>Capture and Share <br>the World's Moments</h2>
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.  </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?  </p>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div id="app-links">
+        <span><a href="#"><img src="images/badge-iphone.png" alt=""></a></span>
+        <span><a href="#"><img src="images/badge-android.png" alt=""></a></span>
+      </div>
+    </div>
+  </div>
 
-  &copy; 2014 Instagram
+  <div class="clearfix"></div>
+
+  <footer>
+    <span><a href="#">About Us</a></span>
+    <span><a href="#">Support</a></span>
+    <span><a href="#">Blog</a></span>
+    <span><a href="#">Press</a></span>
+    <span><a href="#">API</a></span>
+    <span><a href="#">Jobs</a></span>
+    <span><a href="#">Privacy</a></span>
+    <span><a href="#">Terms</a></span>
+    <span> &copy; 2014 Instagram</span>
+  </footer>
+
+
+
 </body>
 </html>
