--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet"  href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id= wrapper>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div id="blue">
+            <div id="header">
+            </div>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      <div id= content>
 
-  Download on the App Store
-  Get it on Google Play
+            <div class="column iphone">
+                    <img src="images/phones.png">
+            </div>
+            <div class="column content" >
+                    <img id="logo" src="images/brand.png">
+                    <button type="button" name="button">
+                        <img id="home" src= "images/home.png">
+                        Log in
+                    </button>
+                    <div id= description>
+                      <div id="title">
+                      <h1>Capture and Share</h1> <h1>the World's Moments</h1>
+                      </div>
+                    <p>Instagram is a <strong> fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
 
-  &copy; 2014 Instagram
+                    <p>Oh yeah, did we mention it's free?</p>
+
+                    <img class="download" src="images/badge-iphone.png" >
+                    <img class="download" src="images/badge-android.png" >
+                    </div>
+            </div>
+      </div>
+
+
+      <div id= footer>
+        <h4>About Us</h4>
+        <h4>Support</h4>
+        <h4>Blog</h4>
+        <h4>Press</h4>
+        <h4>API</h4>
+        <h4>Jobs</h4>
+        <h4>Privacy</h4>
+        <h4>Terms</h4>
+    <h5>&copy; 2014 Instagram</h5>
+      </div>
+  </div>
+
 </body>
 </html>
