--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+  </header>
+  <div class="center">
+    <div class="phones">
+      <img src="images/phones.png">
+    </div>
+    <div class="main">
+      <div class="mainHeader">
+        <img src="images/brand.png">
+        <div class="loginButton">
+          <img src="images/home.png">
+          Log in
+        </div>
+      </div>
+      <div class="mainBody">
+        <div class="mainText">
+          <h1>
+            Capture and Share <br>the World's Moments
+          </h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="mainFooter">
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <a>About Us</a>
+    <a>Support</a>
+    <a>Blog</a>
+    <a>Press</a>
+    <a>API</a>
+    <a>Jobs</a>
+    <a>Privacy</a>
+    <a>Terms</a>
+  <div class="copyright">
+    &copy; 2014 Instagram
+  </div>
+  </footer>
 </body>
 </html>
