--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="bigbox">
+    <div class="left">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="right">
+      <!--<h1>Instagram</h1>-->
+      <div class="topstuff">
+        <img src="images/brand.png" alt="logo">
+        <div class="button">
+          <img src="images/home.png" alt="home">
+          <a href="#">Login</a>
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="bigframe">
+          <div class="frame">
+        <h2>Capture and Share the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="theThings">
+            <img src="images/badge-android.png" alt="andro">
+            <img src="images/badge-iphone.png" alt="iphone">
+          </div>
+        </div>
+      </div>
+    </div>
 
-  &copy; 2014 Instagram
+  </div>
+
+
+  <div class="center">
+    <nav>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a class="grey" href="#">&copy; 2014 Instagram</a></li>
+      </ul>
+    </nav>
+  </div>
+
 </body>
 </html>
