Done! Enviando a Zuckerberg...

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="header-page">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="body-page">
+    <div class="body-left">
+      <div class="mobile-photo">
+        <img src="images/phones.png">
+      </div>
+    </div>
+    <div class="body-right">
+      <div class="wrap-body-header">
+        <img class="logo-insta" src="images/brand.png">
+        <button id="button-login"><img id="button-img" src="images/home.png"><div id="button-text">Log In</div></button>
+      </div>
+      <div class="wrap-body-body">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+      </div>
+      <div class="wrap-body-footer">
+        <img class="iphone-app" src="images/badge-iphone.png">
+        <img class="android-app" src="images/badge-android.png">
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
 
-  &copy; 2014 Instagram
+
+  </div>
+
+  <footer>
+    <a href="https://www.instagram.com/about/us/">About Us</a>
+    <a href="https://help.instagram.com/">Support</a>
+    <a href="http://blog.instagram.com/">Blog</a>
+    <a href="https://instagram-press.com/">Press</a>
+    <a href="https://www.instagram.com/developer/">API</a>
+    <a href="https://www.instagram.com/about/jobs/">JOBS</a>
+    <a href="https://help.instagram.com/196883487377501">PRIVACY</a>
+    <a href="https://help.instagram.com/478745558852511">TERMS</a>
+    <a id="instagram2014" href="https://help.instagram.com/478745558852511">&copy; 2014 Instagram</a>
+  </footer>
 </body>
+
 </html>
