--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="header">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="c-section">
+    <div class="section-Left">
+      <div class="phones"> <img src="./images/phones.png"> </div>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="section-Right">
 
-  Oh yeah, did we mention it's free?
+      <div class="head-wrap">
+        <img class="logo-instagram" src="./images/brand.png">
+        <button class="button">
+        <img class="home" src="./images/home.png"> Log In
+      </button>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="text-container">
+        <div class="text-top">Capture and Share<br> the World's Moments</div>
+        <div class="text">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+          <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br> Oh yeah, did we mention
+          it's free?</div>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="shop-wrap">
+        <img class="badge-iphone" src="./images/badge-iphone.png">
+        <img class="badge-android" src="./images/badge-android.png">
+      </div>
 
-  &copy; 2014 Instagram
+    </div>
+  </div>
+
+  <div class="footer">
+    <a href="https://www.instagram.com/about/us/"> ABOUT US </a>
+    <a href="https://help.instagram.com/"> SUPPORT </a>
+    <a href="http://blog.instagram.com/"> BLOG </a>
+    <a href="https://instagram-press.com/"> PRESS </a>
+    <a href="https://www.instagram.com/developer/"> API </a>
+    <a href="https://www.instagram.com/about/jobs/"> JOBS </a>
+    <a href="https://help.instagram.com/196883487377501"> PRIVACY </a>
+    <a href="https://help.instagram.com/478745558852511"> TERMS </a>
+    <a id="copy" href="https://help.instagram.com/478745558852511">&copy; 2014 INSTAGRAM</a>
+  </div>
+
 </body>
+
 </html>
